...

            <TextView
                android:id="@+id/matched_profile_name"
                android:layout_width="0dp"
                android:layout_height="25dp"
...

            <TextView
                android:id="@+id/matched_profile_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/matched_profile_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Male"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/matched_profile_gender_text"
...

            <TextView
                android:id="@+id/matched_profile_gender_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Female"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/matched_profile_gender_preference_text"
...

            <TextView
                android:id="@+id/matched_profile_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matched_profile_answer1" />


...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matched_profile_answer2" />


...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matched_profile_answer3" />


...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matched_profile_answer4" />

            <TextView
...

            <TextView
                android:id="@+id/matched_profile_answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/matched_profile_weight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/matched_profile_weight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/matched_profile_weight3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/matched_profile_weight4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/matched_profile_weight5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
