<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.losr.presentation.NavigationFragment">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="Blind Mode"
        android:textStyle="bold"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_for_image_navigation"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_margin="120dp"
        app:cardCornerRadius="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/navigation_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/navigation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="User Name"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_for_image_navigation" />

    <Button
        android:id="@+id/navigation_no"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="75dp"
        android:background="@color/red"
        android:text="No"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_match_percent_text" />

    <Button
        android:id="@+id/navigation_Yes"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@color/green"
        android:text="Yes"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_match_percent_text" />

    <TextView
        android:id="@+id/navigation_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No more profiles are avaibale near your location!"
        android:textSize="25dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/navigation_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check again in some time"
        android:textSize="25dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_message1" />

    <TextView
        android:id="@+id/navigation_match_percent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="24dp"
        android:text="Match Percentage:"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_name" />

    <TextView
        android:id="@+id/navigation_match_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/navigation_match_percent_text"
        app:layout_constraintTop_toBottomOf="@+id/navigation_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
