...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
...
                android:text="TextView"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="Sign Out"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
